// Copyright (c) 2020 The Orbit Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

import "module.proto";
import "process.proto";
import "code_block.proto";

message GetProcessListRequest {}

message GetProcessListResponse {
  repeated ProcessInfo processes = 1;
}

message GetModuleListRequest {
  int32 process_id = 1;
}

message GetModuleListResponse {
  repeated ModuleInfo modules = 1;
}

message GetProcessMemoryRequest {
  int32 pid = 1;
  uint64 address = 2;
  uint64 size = 3;
}

message GetProcessMemoryResponse {
  bytes memory = 1;
}

service ProcessService {
  rpc GetProcessList(GetProcessListRequest) returns (GetProcessListResponse) {}

  rpc GetModuleList(GetModuleListRequest) returns (GetModuleListResponse) {}

  rpc GetProcessMemory(GetProcessMemoryRequest)
      returns (GetProcessMemoryResponse) {}
}

message ValidateFramePointersRequest {
  string module_path = 1;
  repeated CodeBlock functions = 2;
}

message ValidateFramePointersResponse {
  repeated CodeBlock functions_without_frame_pointer = 1;
}

service FramePointerValidatorService {
  rpc ValidateFramePointers(ValidateFramePointersRequest)
      returns (ValidateFramePointersResponse) {}
}

message GetCrashRequest {
  enum CrashType {
    CHECK_FALSE = 0;
    NULL_POINTER_DEREFERENCE = 1;
    STACK_OVERFLOW = 2;
  }
  CrashType crash_type = 1;
}

message GetCrashResponse {}

service CrashService {
  rpc CrashOrbitService(GetCrashRequest) returns (GetCrashResponse) {}
}
